# agimus-demos

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  agimus_dev.repos  control.repos  control.source.repos  flake.nix  franka.repos  lfc.repos  mpc.repos  package.xml  planning.repos  tiago-pro.repos  tiago_pro.repos
01_lfc_alone/: CMakeLists.txt  package.xml
agimus_demo_00_franka_controller/: CMakeLists.txt  README.md  dependencies.repos  package.xml
agimus_demo_00_franka_controller/config/: joint_impedance_example_controller_params.yaml  lfc.yaml
agimus_demo_00_franka_controller/launch/: bringup.launch.py  bringup_gz_simulation.launch.py
agimus_demo_01_lfc_alone/: CMakeLists.txt  README.md  dependencies.repos  package.xml
agimus_demo_01_lfc_alone/config/: controller_manager.yaml  joint_state_estimator.yaml  lfc.yaml  linear_feedback_controller.yaml
agimus_demo_01_lfc_alone/launch/: bringup.launch.py  bringup_hw.launch.py
agimus_demo_02_simple_pd_plus/: CMakeLists.txt  README.md  dependencies.repos  package.xml
agimus_demo_02_simple_pd_plus/config/: pd_plus_controller.yaml  pd_plus_controller_params.yaml
agimus_demo_02_simple_pd_plus/launch/: bringup.launch.py  bringup_hw.launch.py
agimus_demo_02_simple_pd_plus_tiago_pro/: CMakeLists.txt  README.md  dependencies.repos  package.xml
agimus_demo_02_simple_pd_plus_tiago_pro/config/: joint_state_estimator.yaml  linear_feedback_controller.yaml  pd_plus_controller.yaml  pd_plus_controller_params.yaml
agimus_demo_02_simple_pd_plus_tiago_pro/launch/: agimus_controller.launch.py  bringup.launch.py
agimus_demo_03_mpc_dummy_traj/: CMakeLists.txt  README.md  dependencies.repos  package.xml
agimus_demo_03_mpc_dummy_traj/config/: agimus_controller_params.yaml  controller_manager.yaml  linear_feedback_controller.yaml  mpc_params.yaml  ocp_definition_file.yaml  trajectory_weigths_params.yaml
agimus_demo_03_mpc_dummy_traj/launch/: bringup.launch.py  bringup_hw.launch.py
agimus_demo_03_mpc_dummy_traj/urdf/: obstacles.xacro
agimus_demo_03_mpc_dummy_traj_tiago_pro/: CMakeLists.txt  README.md  dependencies.repos  package.xml
agimus_demo_03_mpc_dummy_traj_tiago_pro/agimus_demo_03_mpc_dummy_traj_tiago_pro/: async_subscriber.py  hpp_square_motion.py  monolithe_hpp_square_motion.py  orchestrator.py  spline.py
agimus_demo_03_mpc_dummy_traj_tiago_pro/config/: agimus_controller_params.yaml  ocp_definition_file.yaml  plotjuggler_view.xml  trajectory_weights_params.yaml  trajectory_weigths_params.yaml
agimus_demo_03_mpc_dummy_traj_tiago_pro/launch/: bringup.launch.py  test_trajectory_publisher.launch.py
agimus_demo_03_mpc_dummy_traj_tiago_pro/scripts/: orchestrator_node.py  spline.py  tiago_hpp.py  tiago_hpp_from_module.hpp  tuck_arm.py
agimus_demo_03_mpc_dummy_traj_tiago_pro/urdf/: empty.urdf  obstacles.xacro
agimus_demo_04_dual_arm_tiago_pro/: CMakeLists.txt  package.xml
agimus_demo_04_dual_arm_tiago_pro/meshes/: AGIMUS_reinforcment_bar.stl
agimus_demo_04_dual_arm_tiago_pro/scripts/: helper.py  rostools.py  tiago_hpp.py  viewer.py
agimus_demo_04_dual_arm_tiago_pro/srdf/: plate.srdf  reinforcment_bar.srdf  table.srdf
agimus_demo_04_dual_arm_tiago_pro/urdf/: plate.urdf  reinforcment_bar.urdf  table.urdf
agimus_demo_05_pick_and_place/: CMakeLists.txt  README.md  bin_picking.py  calibrated-params.yaml  create_graph.py  dependencies.repos  package.xml  script_hpp.py  utils.py  vis_object.py
agimus_demo_05_pick_and_place/agimus_demo_05_pick_and_place/: async_subscriber.py  bin_picking.py  corba.py  create_graph.py  franka_gripper_client.py  graspit_script_db.py  hpp_client.py  orchestrator.py  save_topics.py  script_hpp.py  state_client.py  target_client.py  throttle_node.py  trajectory_publisher.py  utils.py  vis_handles.py  vis_object.py  visualize_handles.py
agimus_demo_05_pick_and_place/config/: agimus_controller_params.yaml  calibrated-params.yaml  ocp_definition_file.yaml  trajectory_weigths_params.yaml
agimus_demo_05_pick_and_place/example/: convert_graspit_handle.py  data_parser.py  planning.py  test-pointcloud.py
agimus_demo_05_pick_and_place/launch/: bringup.launch.py
agimus_demo_05_pick_and_place/scripts/: pick_and_place_node  pick_and_place_node.py
agimus_demo_05_pick_and_place/srdf/: big_box.srdf  demo.srdf  demo_fer.srdf  demo_fr3.srdf  obj_01.srdf  obj_default.srdf
agimus_demo_05_pick_and_place/urdf/: big_box.urdf  cont_grasp_net_obj.urdf  demo.urdf.xacro  environment.urdf.xacro  franka_arm.xacro  franka_hand.xacro  franka_robot.xacro  obstacles.xacro  small_box.urdf  support.urdf.xacro  utils.xacro
agimus_demo_06_regrasp/: CMakeLists.txt  README.md  package.xml
agimus_demo_06_regrasp/agimus_demo_06_regrasp/: bin_picking.py  create_graph.py  franka_gripper_client.py  graspit_script_db.py  hpp_client.py  image_saver.py  manipulation_rrt_planner.py  orchestrator.py  poincloud_utils.py  trajectory_publisher.py  utils.py  vis_handles.py
agimus_demo_06_regrasp/config/: agimus_controller_params.yaml
agimus_demo_06_regrasp/launch/: bringup.launch.py
agimus_demo_06_regrasp/scripts/: image_saver  regrasp_node
agimus_demo_06_regrasp/srdf/: demo.srdf
agimus_demo_06_regrasp/urdf/: demo.urdf.xacro  environment.urdf.xacro  obstacles.xacro  support.urdf.xacro
agimus_demo_07_deburring/: CMakeLists.txt  README.md  package.xml  setup.cfg
agimus_demo_07_fixed_tiago_pro_deburring/: CMakeLists.txt  README.md  README_real_robot.md  package.xml
agimus_demo_07_tiago_pro_deburring/: CMakeLists.txt  package.xml  setup.cfg
agimus_demo_08_collision_avoidance/: CMakeLists.txt  README.md  package.xml  setup.cfg
agimus_demo_08_polishing/: CMakeLists.txt  juggler_template.xml  package.xml  setup.cfg
agimus_demo_09_glue_spreading/: CMakeLists.txt  README.md  mpcTrajectoryUtils.py  package.xml  setup.cfg  trajectory_node.py
agimus_demo_10_tiago_pro_bar_manip/: CMakeLists.txt  README.md  package.xml  plugin_description.xml  setup.cfg
agimus_demos/: CMakeLists.txt  package.xml
agimus_demos_common/: CMakeLists.txt  README.md  package.xml  setup.cfg
(+374 files in other folders)
