<?xml version="1.0"?>
<package format="2">
  <name>agimus_demos_description</name>
  <version>0.0.0</version>
  <description>agimus_demos_description contains YAML files of AGIMUS project's demos</description>
  <maintainer email="support@franka.de">Franka Robotics GmbH</maintainer>
  <license>Apache 2.0</license>

  <url type="website">http://wiki.ros.org/franka_description</url>
  <url type="repository">https://github.com/frankaemika/franka_ros</url>
  <url type="bugtracker">https://github.com/frankaemika/franka_ros/issues</url>
  <author>Franka Robotics GmbH</author>

  <buildtool_depend>catkin</buildtool_depend>
</package>