<?xml version="1.0"?>
<package format="3">
  <name>agimus_demos</name>
  <version>0.0.0</version>
  <description>
    agimus_demos contains all the demos of AGIMUS project's
  </description>
  <maintainer email="maximilien.naveau@gmail.com">Maximilien Naveau</maintainer>
  <author>Maximilien Naveau</author>

  <license>BSD-2</license>
  <url type="website">https://www.agimus-project.eu/</url>
  <url type="repository">https://github.com/agimus-project/agimus-demos</url>
  <url type="bugtracker">https://github.com/agimus-project/agimus-demos/issues</url>
  <buildtool_depend>ament_cmake_auto</buildtool_depend>


  <!-- <build_depend>eigen</build_depend>
  <buildtool_export_depend>eigen3_cmake_module</buildtool_export_depend>
  <build_export_depend>eigen</build_export_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>realtime_tools</depend>
  <depend>pinocchio</depend>
  <depend>linear_feedback_controller_msgs</depend>

  <test_depend>example-robot-data</test_depend>
  <test_depend>gtest</test_depend> -->

  <!-- <export>
    <build_type>ament_cmake</build_type>
    <controller_interface plugin="${prefix}/controller_plugins.xml" />
  </export> -->
</package>