<?xml version="1.0"?>
<package format="3">
  <name>agimus_demo_01_lfc_alone</name>
  <version>0.0.0</version>
  <description>
    agimus_demo_01_lfc_alone contains the entry points for a simple Panda demo with the LFC
  </description>
  <maintainer email="maximilien.naveau@gmail.com">Maximilien Naveau</maintainer>
  <author>Maximilien Naveau</author>

  <license>BSD-2</license>
  <url type="website">https://www.agimus-project.eu/</url>
  <url type="repository">https://github.com/agimus-project/agimus-demos</url>
  <url type="bugtracker">https://github.com/agimus-project/agimus-demos/issues</url>
  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <controller_interface plugin="${prefix}/controller_plugins.xml" />
  </export>
</package>