<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>agimus_demo_07_tiago_pro_deburring</name>
  <version>0.0.0</version>
  <description>
    Deburring demo for TIAGo Pro with planar mobile base.
    The robot approaches a hole on a pylone sitting on a table and performs
    an insertion motion. Base is modelled as a 3-DoF planar joint (x, y, yaw)
    and the right arm as 7 actuated joints.
  </description>
  <maintainer email="gepetto@laas.fr">Gepetto Team</maintainer>
  <license>BSD-2</license>
  <url type="website">https://www.agimus-project.eu/</url>
  <url type="repository">https://github.com/agimus-project/agimus-demos</url>
  <url type="bugtracker">https://github.com/agimus-project/agimus-demos/issues</url>
  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <exec_depend>agimus_demos_common</exec_depend>
  <exec_depend>linear_feedback_controller</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
