<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>agimus_demo_09_glue_spreading</name>
  <version>0.0.0</version>
  <description>
    agimus_demo_09_glue_spreading contains the entry points for a demo showcasing Panda performing simple task while performing dynamic collision avoidance.
  </description>
  <maintainer email="timothee.carecchio@inria.fr">Timothée Carecchio</maintainer>
  <author>Timothée Carecchio</author>

  <license>BSD-2</license>
  <url type="website">https://www.agimus-project.eu/</url>
  <url type="repository">https://github.com/agimus-project/agimus-demos</url>
  <url type="bugtracker">https://github.com/agimus-project/agimus-demos/issues</url>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <!-- ROS2 dependencies. -->
  <build_depend>generate_parameter_library</build_depend>
  <build_depend>generate_parameter_library_py</build_depend>

  <exec_depend>agimus_demos_common</exec_depend>
  <exec_depend>linear_feedback_controller</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
