[options.entry_points]
console_scripts =
    trajectory_MPC = agimus_demo_10_tiago_pro_bar_manip.trajectory_node:main
    aligator_MPC = agimus_demo_10_tiago_pro_bar_manip.mpc_wrapper:main
    orchestrator_node = agimus_demo_10_tiago_pro_bar_manip.orchestrator_server:main
    tf_base_publisher = agimus_demo_10_tiago_pro_bar_manip.base_tf_odom:main
