<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>agimus_demos_common</name>
  <version>0.0.0</version>
  <description>
    Common launch and config files used across all demos created for Agimus Project.
  </description>
  <maintainer email="guilhem.saurel@laas.fr">Guilhem Saurel</maintainer>
  <license>BSD-2</license>
  <author email="thomas.peyrucain@pal-robotics.com">Thomas Peyrucain</author>
  <author email="maximilien.naveau@gmail.com">Maximilien Naveau</author>

  <url type="website">https://www.agimus-project.eu/</url>
  <url type="repository">https://github.com/agimus-project/agimus-demos</url>
  <url type="bugtracker">https://github.com/agimus-project/agimus-demos/issues</url>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>tiago_description</exec_depend>
  <exec_depend>tiago_pro_gazebo</exec_depend>
  <exec_depend>linear_feedback_controller</exec_depend>
  <exec_depend>python3-jinja2</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
