<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>agimus_demos_common</name>
  <version>0.0.0</version>
  <description>
    Common launch and config files used across all demos created for Agimus Project.
  </description>
  <maintainer email="guilhem.saurel@laas.fr">Guilhem Saurel</maintainer>
  <license>BSD-2-Clause</license>
  <author email="mederic.fourmy@cvut.cz">Mederic Fourmy</author>
  <author email="krzysztof.wojciechowski@laas.fr">Krzysztof Wojciechowski</author>
  <author email="thomas.peyrucain@pal-robotics.com">Thomas Peyrucain</author>
  <author email="maximilien.naveau@gmail.com">Maximilien Naveau</author>
  <author email="thomas.peyrucain@pal-robotics.com">Thomas Peyrucain</author>
  <author email="maximilien.naveau@gmail.com">Maximilien Naveau</author>

  <url type="website">https://www.agimus-project.eu/</url>
  <url type="repository">https://github.com/agimus-project/agimus-demos</url>
  <url type="bugtracker">https://github.com/agimus-project/agimus-demos/issues</url>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- External dependencies. -->
  <exec_depend>python3-jinja2</exec_depend>

  <!-- Franka dependencies. -->
  <exec_depend condition="$PAL_DISTRO != alum">agimus_franka_description</exec_depend>
  <exec_depend condition="$PAL_DISTRO != alum">agimus_franka_gripper</exec_depend>
  <exec_depend condition="$PAL_DISTRO != alum">agimus_franka_hardware</exec_depend>
  <exec_depend condition="$PAL_DISTRO != alum">agimus_franka_ign_ros2_control</exec_depend>
  <exec_depend condition="$PAL_DISTRO != alum">agimus_franka_robot_state_broadcaster</exec_depend>
  <exec_depend condition="$PAL_DISTRO != alum">gripper_controllers</exec_depend>
  <exec_depend condition="$PAL_DISTRO != alum">net_ft_description</exec_depend>
  <exec_depend condition="$PAL_DISTRO != alum">net_ft_diagnostic_broadcaster</exec_depend>
  <exec_depend condition="$PAL_DISTRO != alum">net_ft_driver</exec_depend>

  <!-- Tiago-Pro dependencies. -->
  <exec_depend  condition="$PAL_DISTRO == alum">tiago_pro_description</exec_depend>
  <exec_depend  condition="$PAL_DISTRO == alum">tiago_pro_gazebo</exec_depend>

  <!-- ROS2 dependencies. -->
  <build_depend>generate_parameter_library</build_depend>
  <build_depend>generate_parameter_library_py</build_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>force_torque_sensor_broadcaster</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>plotjuggler</exec_depend>
  <exec_depend>plotjuggler_ros</exec_depend>
  <exec_depend>plotjuggler_msgs</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros2controlcli</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <!-- Consortium dependencies. -->
  <exec_depend>linear_feedback_controller</exec_depend>
  <exec_depend>linear_feedback_controller_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
