[options.entry_points]
console_scripts =
    wait_for_non_zero_joints_node = agimus_demos_common.wait_for_non_zero_joints_node:main
    string_publisher = agimus_demos_common.string_publisher:main
    happypose_to_tf_node = agimus_demos_common.happypose_to_tf_node:main
    happypose_simulation = agimus_demos_common.happypose_simulation:main
