[options.entry_points]
console_scripts =
    happypose_simulation = agimus_demos_common.happypose_simulation:main
    happypose_to_tf_node = agimus_demos_common.happypose_to_tf_node:main
    string_publisher = agimus_demos_common.string_publisher:main
    switch_controllers_trigger_node = agimus_demos_common.switch_controllers_trigger_node:main
    wait_for_non_zero_joints_node = agimus_demos_common.wait_for_non_zero_joints_node:main
